--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,36 @@
+:root {
+  margin: 0;
+  padding: 0;
+  --primary-color: #fd6d00;
+  --textColor: #444;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
+
+body {
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Poppins", sans-serif;
+  color: var(--textColor);
+  line-height: 1.7;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto", sans-serif;
+  line-height: 1.3;
+}
+
+a {
+  transition: 0.1s;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-body {
-  color: #333;
-  line-height: 1.7;
 }
