--- a/src/components/Shared/Footer/Footer.css
+++ b/src/components/Shared/Footer/Footer.css
@@ -1,11 +1,8 @@
-.footer-component {
-  padding: 60px 0;
-}
-.logo-with-social a {
+.logo-with-social > a {
   display: inline-block;
   margin-bottom: 30px;
 }
-.logo-with-social a img {
+.logo-with-social > a img {
   max-width: 200px;
 }
 
@@ -56,6 +53,12 @@
   color: var(--primary-color);
 }
 
+.footer-copyright {
+  background: var(--primary-color);
+  padding: 20px 0;
+  color: #fff;
+}
+
 /* responsive styles
 ==================== */
 @media all and (max-width: 767px) {
@@ -77,5 +80,13 @@
 
   .footer-component .col-lg-4:nth-child(2) {
     margin: 30px 0;
+  }
+
+  .footer-copyright p {
+    font-size: 12px;
+  }
+
+  .footer-copyright {
+    padding: 10px 0;
   }
 }
