Added Facilities section on Home page

--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,11 @@ a {
   padding: 0;
   box-sizing: border-box;
 }
+
+/* responsive styles global
+========================== */
+@media all and (max-width: 767px) {
+  body {
+    font-size: 14px;
+  }
+}
