Added InnerHero component & light logo for header

--- a/src/components/Shared/Header/Header.css
+++ b/src/components/Shared/Header/Header.css
@@ -1,5 +1,8 @@
 .header-component {
-  background: #6d6c6f;
+  position: absolute;
+  z-index: 99;
+  width: 100%;
+  background: #10010138;
 }
 
 .link-items a {
