--- a/src/components/Section/Hero/Hero.css
+++ b/src/components/Section/Hero/Hero.css
@@ -23,15 +23,17 @@
   background: var(--primary-color);
   color: #fff;
   text-decoration: none;
-  font-size: 30px;
-  padding: 10px 70px;
+  font-size: 20px;
+  padding: 15px 50px;
   border-radius: 60px;
   border: 2px solid var(--primary-color);
+  transition: 0.2s;
 }
 
 .hero-slider .slider-item .go-listings:hover {
   background: transparent;
-  color: var(--primary-color);
+  color: #fff;
+  border-color: #fff;
 }
 
 .hero-slider .slider-item .slider-content {
@@ -45,9 +47,9 @@
   height: 100%;
   left: 0;
   top: 0;
-  background: #000000;
+  background: #003493;
   z-index: -1;
-  opacity: 0.6;
+  opacity: 0.3;
 }
 
 .hero-slider .swiper-pagination-bullet-active {
